--- a/aboutme.html
+++ b/aboutme.html
@@ -88,7 +88,7 @@
     <!-- br-->
     <!-- br-->
 
-    <li><h2><strong><font face="Georgia" '="">Published URL: <a href="" target="_blank">/aboutme.html</a></font></strong></h2></li>
+    <li><h2><strong><font face="Georgia" '="">Published URL: <a href="https://ntnmshth.github.io/ntnmshtheresume.github.io/aboutme.html" target="_blank">/aboutme.html</a></font></strong></h2></li>
      <!-- br-->
      <!-- br-->
     
