--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOMEPAGE</title>
+    <title>ABOUTME</title>
 </head> <title>MY RESUME</title>
 <body> <body background="image/background kertas.jpg">;
     </scrip
@@ -88,7 +88,7 @@
     <!-- br-->
     <!-- br-->
 
-    <li><h2><strong><font face="Georgia" '="">Published URL: <a href="https://ntnmshth.github.io/ntnmshtheresume.github.io/aboutme.html" target="_blank">/aboutme.html</a></font></strong></h2></li>
+    <li><h2><strong><font face="Georgia" '="">Published URL: <a href="https://ntnmshth.github.io/ntnmshtheresume.github.io/homepage.html" target="_blank">/aboutme.html</a></font></strong></h2></li>
      <!-- br-->
      <!-- br-->
     
